add damage to hover

--- a/src/main/resources/assets/mcdoomgunlevels/lang/en_us.json
+++ b/src/main/resources/assets/mcdoomgunlevels/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "gui.mcdoomgunlevels.level_number": "Level %s/%s",
+  "gui.mcdoomgunlevels.level_number": "Level %s/%s (%.2fx)",
   "gui.mcdoomgunlevels.next_kills": "Next Level: %s/%s ☠",
   "gui.mcdoomgunlevels.total_kills": "Total: %s ☠"
 }
